hphp/hack/test/typecheck/like_types/like_casts2.php.exp
File "like_casts2.php", line 8, characters 9-17:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 8, characters 10-17:
  The `as` operator cannot be used with a type with an erased generic type argument
File "like_casts2.php", line 9, characters 9-20:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 9, characters 10-20:
  The `as` operator cannot be used with a type with an erased generic type argument
File "like_casts2.php", line 10, characters 9-17:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 10, characters 10-17:
  The `as` operator cannot be used with a type with an erased generic type argument
File "like_casts2.php", line 15, characters 9-33:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 15, characters 10-33:
  The `as` operator cannot be used with a function type
File "like_casts2.php", line 19, characters 9-31:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 19, characters 23-30:
  The `as` operator cannot be used with a type with an erased generic type argument
File "like_casts2.php", line 21, characters 9-34:
Invalid `as` expression hint (Typing[4195])
  File "like_casts2.php", line 21, characters 23-33:
  The `as` operator cannot be used with a type with an erased generic type argument
